ADD jib settings